# Simple-Calculator

./: .gitignore  CMakeLists.txt  Makefile  README.md  a.out  lib.cpp  lib.hpp  main.cpp  test.cpp
include/: Calculator.hpp  Tokenizer.hpp  Visitor.hpp
src/: Calculator.cpp  Number.hpp  Operator.hpp  PairVisitor.hpp  Param.hpp  Token.hpp  Tokenizer.cpp  Tokenizer.hpp  lib.hpp  main.cpp
tests/: CMakeLists.txt  test_calculator.cpp  test_tokenizer.cpp  tests.cpp  tests.hpp
